force-app/main/default/objects/MyCAP_Rules__mdt/MyCAP_Rules__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for MyCAP out-year uplift defaulting and Deal Desk approval thresholds on multi-year annually-billed deals</description>
    <label>MyCAP Rules</label>
    <pluralLabel>MyCAP Rules</pluralLabel>
</CustomObject>