force-app/main/default/objects/MyCAP_Rules__mdt/fields/Default_Out_Year_Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>Default_Out_Year_Uplift_Percent__c</fullName>
    <defaultValue>3.00</defaultValue>
    <description>Standard COLA uplift percentage applied to qualifying multi-year annually-billed QLIs when the sales rep has not overridden. Example: 3.00 for a 3% annual increase.</description>
    <label>Default Out-Year Uplift Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>