force-app/main/default/objects/MyCAP_Rules__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Feature toggle. When false, the MyCAP prehook branch takes no action (defaulting and approval flagging both skipped).</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>