force-app/main/default/objects/MyCAP_Rules__mdt/fields/Minimum_Out_Year_Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Out_Year_Uplift_Percent__c</fullName>
    <defaultValue>3.00</defaultValue>
    <description>Threshold below which Quote.Mycap__c is flagged to true (triggering Deal Desk approval via the existing record-triggered flow). Example: 3.00 means any effective uplift strictly less than 3% requires approval.</description>
    <label>Minimum Out-Year Uplift Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>